force-app/main/default/objects/Opportunity/fields/NF_ARE_Contract__c.field-meta.xml
<CustomField>
    <fullName>NF_ARE_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ARE Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (ARE Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>