force-app/main/default/objects/Opportunity/fields/NF_Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NF_Billing_Contact_Name__c</fullName>
    <formula>NF_Billing_Contact__r.FirstName &amp; &quot; &quot; &amp;NF_Billing_Contact__r.LastName</formula>
    <label>Billing Contact Name</label>
    <type>Text</type>
</CustomField>