force-app/main/default/objects/Opportunity/fields/NF_Default_Escalation__c.field-meta.xml
<CustomField>
    <fullName>NF_Default_Escalation__c</fullName>
    <formula>$CustomMetadata.Default_Escalation__mdt.NF_Default_Escalation.Escalation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Escalation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>