force-app/main/default/objects/Opportunity/fields/NF_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NF_Primary_Contact_Name__c</fullName>
    <description>Built for DocuSign button to pull in first and last name of primary contact on the opportunity.

Deactivated with ES-36004. Formula Value: Primary_Contact__r.FirstName &amp; &quot; &quot; &amp;Primary_Contact__r.LastName</description>
    <formula>NF_Primary_Contact__r.FirstName &amp; &quot; &quot; &amp;NF_Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>